# Codes

./: AvlTree.h  README.md  test.cpp  test0.cpp
AvlTree/: AvlTree.sln
AvlTree/AvlTree/: AvlTree.h  AvlTree.vcxproj  AvlTree.vcxproj.filters  main.cpp
AvlTree/AvlTree/Debug/: AvlTree.exe.recipe  AvlTree.ilk  vc142.idb
BSTree/: BSTree.sln
BSTree/BSTree/: BSTree.vcxproj  BSTree.vcxproj.filters  Binary_Search_Tree.h
BSTree/BSTree/Debug/: BSTree.exe.recipe  BSTree.ilk  vc142.idb
Bill_list/bill_0/Lab3StarterCode/: Actor.cpp  Actor.h  Lab3StarterCode.rar  Movie.cpp  lab3.cpp
Bill_list/bill_1/CHC5028-Coursework initial CLion project/: Room.h  State.cpp  State.h  main.cpp  strings.h
Bill_list/bill_2/: batt_update.s  batt_update_asm.s
Bill_list/bill_2/func_set_batt_from_ports/: batt_update.c  batt_update_asm.s  batt_update_asm_backup.s  func_set_batt_from_ports.s  hybrid_main  test_hybrid.org
Bill_list/bill_2/p1-code/: a.out  batt_update.c  batt_update_asm.s  batt_update_asm1.s  batt_update_temp.s  printf.s  test  test.c  test.s  test_1.s
Bill_list/bill_2/p3-code/: batt_sim.c  batt_update.c  batt_update_asm.s  core.27494  core.27629  core.27700  core.27943  core.28016  core.28087  core.28224  hybrid_main  temp.s  test_batt_update.org  test_hybrid_batt_update
Bill_list/bill_2/p3-code - 副本/: Makefile  batt_update.c  batt_update_asm.s  hybrid_main  test_batt_update.c
Bill_list/bill_2/p3-code_finish/: Makefile  batt_update.c  batt_update_asm.ly.s  func_batt_update.s  func_set_batt_from_ports.s  hybrid_main  run.sh  test_batt_update  (+1 more)
Bill_list/bill_2/p3-code_finish - 副本/: batt_update_asm.s  bomb_download.sh  testy
Bill_list/bill_3/: Algorithm for Prefix to Infix Conversion.docx  PolishPrefixToInfix_sample.cpp  PolishPrefixToInfix_sample0.cpp  a.out
C#/ConsoleApp1/: ConsoleApp1.sln
C#/WindowsFormsApp1/: WindowsFormsApp1.sln
Database/: Database.sln
Database/Database/: Database.vcxproj  Database.vcxproj.filters  main.cpp  node.h  queue.h  tree.h
LINUX/: CMakeLists.txt
LINUX/DATA_STRUCTURES_ALGORITHMS/: README.md  README_BAK.md
LINUX/DATA_STRUCTURES_ALGORITHMS/LINEAR_TABLE/: CMakeLists.txt  run.sh  sequence_list.cpp  sequence_list.h  sequence_list_test.cpp
LINUX/DATA_STRUCTURES_ALGORITHMS/LINEAR_TABLE/.cache/clangd/index/: sequence_list.cpp.055C0B30556D22F5.idx  sequence_list.h.C8B4185A0F83A1DE.idx  sequence_list_test.cpp.1A2150168F904FBF.idx
LINUX/INTEREST_CODES/: a.out  donut_deobfuscated.c
LINUX/LEARNING/ftxui-learning/hello_world/: CMakeLists.txt
LINUX/LEARNING/ftxui-learning/hello_world/src/: main.cpp
LINUX/LEARNING/propertytree-learning/: CMakeLists.txt  config.json  main.cc
LINUX/LEARNING/spdlog-learning/: CMakeLists.txt  asyn-logger.cc  basic-logger.cc  hello-world.cc  rotating-logger.cc
LINUX/LEET_CODE/: READEME.md  READEME_zh.md  README.md
LINUX/MY_SHELL/: a.out  main.c  shell.c  shell.h
LINUX/NCURSES_TEST/: CMakeLists.txt  test.cpp
LINUX/NCURSES_TEST/.cache/clangd/index/: main.cpp.16021549F39D9F2E.idx  main.cpp.5A95AEA34DE5F69A.idx  main.cpp.A79046EC1E804C19.idx  main.cpp.D70EB7898D317AB8.idx  main.cpp.F2F3CEA4BB3CB560.idx  main.cpp.F6E5E7CEAD1E2704.idx  test.cpp.29FD80AAAA106EA0.idx
LINUX/NCURSES_TEST/first_example/: CMakeLists.txt  main.cpp
LINUX/NCURSES_TEST/hello_word/: CMakeLists.txt  main.cpp
LINUX/NCURSES_TEST/second_example/: CMakeLists.txt  main.cpp
LINUX/NCURSES_TEST/test_example/: CMakeLists.txt
Move_Copy/: Move_Copy.sln
Move_Copy/Move_Copy/: main.cpp
OS_TEST/: Cpu.cpp  Cpu.h
Project1/: Project1.sln
Sample-Test1/Sample-Test1/: Sample-Test1.vcxproj  pch.cpp  test.cpp
Test_New/: Test_New.sln
Test_New/Test_New/: Test_New.cpp  Test_New.vcxproj  Test_New.vcxproj.filters
WINDOWS/AvlTree/: main.cpp
WINDOWS/BSTree/: main.cpp
WINDOWS/OS_TEST/: Process.cpp  Process.h  makefile  tools.h
WINDOWS/Sample-Test1/: Sample-Test1.sln
python/: Hello_bitcoin.py
soft-engineering/soft-engineering/: CMakeLists.txt
soft-engineering/soft-engineering/source/: main.cpp
soft-engineering/soft-engineering/test/: NodeTest.cpp
test/: main.cpp  test.cpp  test.java  test0.cpp
test/Test/: Test.sln
(+753 files in other folders)
